{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 477,
  "lineage": "7aaeddbe-b35f-6811-e8cc-28e904309cd5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "mytg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg12025042915395347250000000a/10505e15248d1ef1-20250429154154594500000013",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg12025042915395347250000000a/10505e15248d1ef1",
            "target_id": "i-04ffae9d9d5ab0ae5"
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.alb.aws_lb_target_group.this",
            "module.ec2_private_ec2_instance_app1.aws_eip.this",
            "module.ec2_private_ec2_instance_app1.aws_iam_instance_profile.this",
            "module.ec2_private_ec2_instance_app1.aws_iam_role.this",
            "module.ec2_private_ec2_instance_app1.aws_iam_role_policy_attachment.this",
            "module.ec2_private_ec2_instance_app1.aws_instance.ignore_ami",
            "module.ec2_private_ec2_instance_app1.aws_instance.this",
            "module.ec2_private_ec2_instance_app1.aws_spot_instance_request.this",
            "module.ec2_private_ec2_instance_app1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_private_ec2_instance_app1.data.aws_partition.current",
            "module.ec2_private_ec2_instance_app1.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.egress_rules",
            "module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.egress_with_self",
            "module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.ingress_rules",
            "module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.public_sg.aws_security_group_rule.computed_egress_rules",
            "module.public_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_egress_with_self",
            "module.public_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.computed_ingress_rules",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.egress_rules",
            "module.public_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.egress_with_self",
            "module.public_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.ingress_rules",
            "module.public_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.ingress_with_self",
            "module.public_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg12025042915395347250000000a/10505e15248d1ef1-20250429154154870700000014",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg12025042915395347250000000a/10505e15248d1ef1",
            "target_id": "i-0ce287b69650cd5d5"
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.alb.aws_lb_target_group.this",
            "module.ec2_private_ec2_instance_app1.aws_eip.this",
            "module.ec2_private_ec2_instance_app1.aws_iam_instance_profile.this",
            "module.ec2_private_ec2_instance_app1.aws_iam_role.this",
            "module.ec2_private_ec2_instance_app1.aws_iam_role_policy_attachment.this",
            "module.ec2_private_ec2_instance_app1.aws_instance.ignore_ami",
            "module.ec2_private_ec2_instance_app1.aws_instance.this",
            "module.ec2_private_ec2_instance_app1.aws_spot_instance_request.this",
            "module.ec2_private_ec2_instance_app1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_private_ec2_instance_app1.data.aws_partition.current",
            "module.ec2_private_ec2_instance_app1.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.egress_rules",
            "module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.egress_with_self",
            "module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.ingress_rules",
            "module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.public_sg.aws_security_group_rule.computed_egress_rules",
            "module.public_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_egress_with_self",
            "module.public_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.computed_ingress_rules",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.egress_rules",
            "module.public_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.egress_with_self",
            "module.public_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.ingress_rules",
            "module.public_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.ingress_with_self",
            "module.public_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "mytg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg220250429153953422800000009/cb8718f7b38cac05-20250429154154186400000012",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg220250429153953422800000009/cb8718f7b38cac05",
            "target_id": "i-05550f9a275a5cac3"
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.alb.aws_lb_target_group.this",
            "module.ec2_private_ec2_instance_app2.aws_eip.this",
            "module.ec2_private_ec2_instance_app2.aws_iam_instance_profile.this",
            "module.ec2_private_ec2_instance_app2.aws_iam_role.this",
            "module.ec2_private_ec2_instance_app2.aws_iam_role_policy_attachment.this",
            "module.ec2_private_ec2_instance_app2.aws_instance.ignore_ami",
            "module.ec2_private_ec2_instance_app2.aws_instance.this",
            "module.ec2_private_ec2_instance_app2.aws_spot_instance_request.this",
            "module.ec2_private_ec2_instance_app2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_private_ec2_instance_app2.data.aws_partition.current",
            "module.ec2_private_ec2_instance_app2.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.egress_rules",
            "module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.egress_with_self",
            "module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.ingress_rules",
            "module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.public_sg.aws_security_group_rule.computed_egress_rules",
            "module.public_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_egress_with_self",
            "module.public_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.computed_ingress_rules",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.egress_rules",
            "module.public_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.egress_with_self",
            "module.public_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.ingress_rules",
            "module.public_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.ingress_with_self",
            "module.public_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg220250429153953422800000009/cb8718f7b38cac05-20250429154153742600000011",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg220250429153953422800000009/cb8718f7b38cac05",
            "target_id": "i-08b43e5c0a61b0e5f"
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.alb.aws_lb_target_group.this",
            "module.ec2_private_ec2_instance_app2.aws_eip.this",
            "module.ec2_private_ec2_instance_app2.aws_iam_instance_profile.this",
            "module.ec2_private_ec2_instance_app2.aws_iam_role.this",
            "module.ec2_private_ec2_instance_app2.aws_iam_role_policy_attachment.this",
            "module.ec2_private_ec2_instance_app2.aws_instance.ignore_ami",
            "module.ec2_private_ec2_instance_app2.aws_instance.this",
            "module.ec2_private_ec2_instance_app2.aws_spot_instance_request.this",
            "module.ec2_private_ec2_instance_app2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_private_ec2_instance_app2.data.aws_partition.current",
            "module.ec2_private_ec2_instance_app2.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.egress_rules",
            "module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.egress_with_self",
            "module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.ingress_rules",
            "module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.public_sg.aws_security_group_rule.computed_egress_rules",
            "module.public_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_egress_with_self",
            "module.public_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.computed_ingress_rules",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.egress_rules",
            "module.public_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.egress_with_self",
            "module.public_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.ingress_rules",
            "module.public_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.ingress_with_self",
            "module.public_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9467bdf5d2c0762",
            "arn": "arn:aws:ec2:us-east-1:690248313330:elastic-ip/eipalloc-0e9467bdf5d2c0762",
            "association_id": "eipassoc-04d7cdb28ea9b01e8",
            "domain": "vpc",
            "id": "eipalloc-0e9467bdf5d2c0762",
            "instance": "i-06adb56dc008e1416",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09c5172cfb51989b8",
            "private_dns": "ip-10-0-101-110.ec2.internal",
            "private_ip": "10.0.101.110",
            "public_dns": "ec2-54-156-152-253.compute-1.amazonaws.com",
            "public_ip": "54.156.152.253",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_public_ec2_instance.aws_eip.this",
            "module.ec2_public_ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_public_ec2_instance.aws_iam_role.this",
            "module.ec2_public_ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_public_ec2_instance.aws_instance.ignore_ami",
            "module.ec2_public_ec2_instance.aws_instance.this",
            "module.ec2_public_ec2_instance.aws_spot_instance_request.this",
            "module.ec2_public_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public_ec2_instance.data.aws_partition.current",
            "module.ec2_public_ec2_instance.data.aws_ssm_parameter.this",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:loadbalancer/app/IT-dev-vpc-alb/6fdb0ad2e3526da3",
            "arn_suffix": "app/IT-dev-vpc-alb/6fdb0ad2e3526da3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "IT-dev-vpc-alb-802605142.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:690248313330:loadbalancer/app/IT-dev-vpc-alb/6fdb0ad2e3526da3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "IT-dev-vpc-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-002a4cd6145597b9a",
              "sg-056c62f35d51b764c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c6fb65c9ece7c01a"
              },
              {
                "subnet_id": "subnet-0eddc8e1be491515e"
              }
            ],
            "subnets": [
              "subnet-0c6fb65c9ece7c01a",
              "subnet-0eddc8e1be491515e"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0f39000d60712946b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "my-http-https-redirect",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:listener/app/IT-dev-vpc-alb/6fdb0ad2e3526da3/fa47a7eceb037f91",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690248313330:listener/app/IT-dev-vpc-alb/6fdb0ad2e3526da3/fa47a7eceb037f91",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:loadbalancer/app/IT-dev-vpc-alb/6fdb0ad2e3526da3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_route53_zone.mydomain",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "my-https-listener",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:listener/app/IT-dev-vpc-alb/6fdb0ad2e3526da3/f5f7281ed61f94fa",
            "certificate_arn": "arn:aws:acm:us-east-1:690248313330:certificate/6dbbb528-b241-48d9-aad8-a8ea47e16b6d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "This is a fixed response for root context",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690248313330:listener/app/IT-dev-vpc-alb/6fdb0ad2e3526da3/f5f7281ed61f94fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:loadbalancer/app/IT-dev-vpc-alb/6fdb0ad2e3526da3",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-Res-2021-06",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_route53_zone.mydomain",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "my-https-listener/myapp1-rule",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": true
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg12025042915395347250000000a/10505e15248d1ef1",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:listener-rule/app/IT-dev-vpc-alb/6fdb0ad2e3526da3/f5f7281ed61f94fa/6b8c8531e0881bb6",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app1*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690248313330:listener-rule/app/IT-dev-vpc-alb/6fdb0ad2e3526da3/f5f7281ed61f94fa/6b8c8531e0881bb6",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:listener/app/IT-dev-vpc-alb/6fdb0ad2e3526da3/f5f7281ed61f94fa",
            "priority": 1,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_route53_zone.mydomain",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "my-https-listener/myapp2-rule",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": true
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg220250429153953422800000009/cb8718f7b38cac05",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:listener-rule/app/IT-dev-vpc-alb/6fdb0ad2e3526da3/f5f7281ed61f94fa/691f13fcb2dd73fc",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app2*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690248313330:listener-rule/app/IT-dev-vpc-alb/6fdb0ad2e3526da3/f5f7281ed61f94fa/691f13fcb2dd73fc",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:listener/app/IT-dev-vpc-alb/6fdb0ad2e3526da3/f5f7281ed61f94fa",
            "priority": 2,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_route53_zone.mydomain",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mytg1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg12025042915395347250000000a/10505e15248d1ef1",
            "arn_suffix": "targetgroup/mytg12025042915395347250000000a/10505e15248d1ef1",
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app1/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg12025042915395347250000000a/10505e15248d1ef1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "false",
            "name": "mytg12025042915395347250000000a",
            "name_prefix": "mytg1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "mytg2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg220250429153953422800000009/cb8718f7b38cac05",
            "arn_suffix": "targetgroup/mytg220250429153953422800000009/cb8718f7b38cac05",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app2/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:690248313330:targetgroup/mytg220250429153953422800000009/cb8718f7b38cac05",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mytg220250429153953422800000009",
            "name_prefix": "mytg2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-056c62f35d51b764c",
            "description": "Security group for IT-dev-vpc-alb application load balancer",
            "egress": [],
            "id": "sg-056c62f35d51b764c",
            "ingress": [],
            "name": "IT-dev-vpc-alb-20250429153951994900000006",
            "name_prefix": "IT-dev-vpc-alb-",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-002a4cd6145597b9a",
            "description": "Security group open to the world for load balancer",
            "egress": [],
            "id": "sg-002a4cd6145597b9a",
            "ingress": [],
            "name": "loadbalancer_sg-20250429153949785600000004",
            "name_prefix": "loadbalancer_sg-",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-4200586362",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-002a4cd6145597b9a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-4077036645",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-002a4cd6145597b9a",
            "security_group_rule_id": "sgr-0dd4580423d22e5fd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1863477731",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-002a4cd6145597b9a",
            "security_group_rule_id": "sgr-0ee55546923a2ffc5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP 81 - Allow from Internet",
            "from_port": 81,
            "id": "sgrule-481024515",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-002a4cd6145597b9a",
            "security_group_rule_id": "sgr-052217921c092bb0f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 81,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private_ec2_instance_app1[\"0\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065aeacd44e98d9ac",
            "arn": "arn:aws:ec2:us-east-1:690248313330:instance/i-04ffae9d9d5ab0ae5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ffae9d9d5ab0ae5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ae6b69dc14d0357",
            "private_dns": "ip-10-0-1-235.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03b666ec5f22e62ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0717408d1c369f04a",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "IT - dev - app-1"
            },
            "vpc_security_group_ids": [
              "sg-0731e13342dedbd58"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_private_ec2_instance_app1.aws_iam_instance_profile.this",
            "module.ec2_private_ec2_instance_app1.aws_iam_role.this",
            "module.ec2_private_ec2_instance_app1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_private_ec2_instance_app1.data.aws_partition.current",
            "module.ec2_private_ec2_instance_app1.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.egress_rules",
            "module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.egress_with_self",
            "module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.ingress_rules",
            "module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.public_sg.aws_security_group_rule.computed_egress_rules",
            "module.public_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_egress_with_self",
            "module.public_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.computed_ingress_rules",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.egress_rules",
            "module.public_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.egress_with_self",
            "module.public_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.ingress_rules",
            "module.public_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.ingress_with_self",
            "module.public_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private_ec2_instance_app1[\"1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065aeacd44e98d9ac",
            "arn": "arn:aws:ec2:us-east-1:690248313330:instance/i-0ce287b69650cd5d5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce287b69650cd5d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b2192652eea5defb",
            "private_dns": "ip-10-0-2-172.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0418ba1881aed1813",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0024958f5f2f2daee",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "IT - dev - app-1"
            },
            "vpc_security_group_ids": [
              "sg-0731e13342dedbd58"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_private_ec2_instance_app1.aws_iam_instance_profile.this",
            "module.ec2_private_ec2_instance_app1.aws_iam_role.this",
            "module.ec2_private_ec2_instance_app1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_private_ec2_instance_app1.data.aws_partition.current",
            "module.ec2_private_ec2_instance_app1.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.egress_rules",
            "module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.egress_with_self",
            "module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.ingress_rules",
            "module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.public_sg.aws_security_group_rule.computed_egress_rules",
            "module.public_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_egress_with_self",
            "module.public_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.computed_ingress_rules",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.egress_rules",
            "module.public_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.egress_with_self",
            "module.public_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.ingress_rules",
            "module.public_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.ingress_with_self",
            "module.public_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private_ec2_instance_app2[\"0\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065aeacd44e98d9ac",
            "arn": "arn:aws:ec2:us-east-1:690248313330:instance/i-05550f9a275a5cac3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05550f9a275a5cac3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c5a755cc3d246088",
            "private_dns": "ip-10-0-1-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-057488b96bac5797b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0717408d1c369f04a",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "IT - dev - app-2"
            },
            "vpc_security_group_ids": [
              "sg-0731e13342dedbd58"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_private_ec2_instance_app2.aws_iam_instance_profile.this",
            "module.ec2_private_ec2_instance_app2.aws_iam_role.this",
            "module.ec2_private_ec2_instance_app2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_private_ec2_instance_app2.data.aws_partition.current",
            "module.ec2_private_ec2_instance_app2.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.egress_rules",
            "module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.egress_with_self",
            "module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.ingress_rules",
            "module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.public_sg.aws_security_group_rule.computed_egress_rules",
            "module.public_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_egress_with_self",
            "module.public_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.computed_ingress_rules",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.egress_rules",
            "module.public_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.egress_with_self",
            "module.public_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.ingress_rules",
            "module.public_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.ingress_with_self",
            "module.public_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private_ec2_instance_app2[\"1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065aeacd44e98d9ac",
            "arn": "arn:aws:ec2:us-east-1:690248313330:instance/i-08b43e5c0a61b0e5f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b43e5c0a61b0e5f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09bc61392bc4009b9",
            "private_dns": "ip-10-0-2-163.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e5ecb13dd5150b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0024958f5f2f2daee",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "IT - dev - app-2"
            },
            "vpc_security_group_ids": [
              "sg-0731e13342dedbd58"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_private_ec2_instance_app2.aws_iam_instance_profile.this",
            "module.ec2_private_ec2_instance_app2.aws_iam_role.this",
            "module.ec2_private_ec2_instance_app2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_private_ec2_instance_app2.data.aws_partition.current",
            "module.ec2_private_ec2_instance_app2.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.egress_rules",
            "module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.egress_with_self",
            "module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.ingress_rules",
            "module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.public_sg.aws_security_group_rule.computed_egress_rules",
            "module.public_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_egress_with_self",
            "module.public_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.computed_ingress_rules",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.egress_rules",
            "module.public_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.egress_with_self",
            "module.public_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.ingress_rules",
            "module.public_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.ingress_with_self",
            "module.public_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065aeacd44e98d9ac",
            "arn": "arn:aws:ec2:us-east-1:690248313330:instance/i-06adb56dc008e1416",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06adb56dc008e1416",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c5172cfb51989b8",
            "private_dns": "ip-10-0-101-110.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0afd16d6018740524",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6fb65c9ece7c01a",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "IT-dev-vpc- public ec2 instance"
            },
            "vpc_security_group_ids": [
              "sg-0a20bd514bb874723"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_public_ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_public_ec2_instance.aws_iam_role.this",
            "module.ec2_public_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public_ec2_instance.data.aws_partition.current",
            "module.ec2_public_ec2_instance.data.aws_ssm_parameter.this",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-0731e13342dedbd58",
            "description": "Security group for bastian host with SSH access",
            "egress": [],
            "id": "sg-0731e13342dedbd58",
            "ingress": [],
            "name": "dev-IT-private-sg-https-20250429153953422100000008",
            "name_prefix": "dev-IT-private-sg-https-",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2176006208",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0731e13342dedbd58",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3024542612",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0731e13342dedbd58",
            "security_group_rule_id": "sgr-0c3def77ece30acca",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-942545578",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0731e13342dedbd58",
            "security_group_rule_id": "sgr-03d5330df132dbe16",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-0a20bd514bb874723",
            "description": "Security group for bastian host with SSH access",
            "egress": [],
            "id": "sg-0a20bd514bb874723",
            "ingress": [],
            "name": "dev-IT-bastian-sg-ssh-20250429153951950700000005",
            "name_prefix": "dev-IT-bastian-sg-ssh-",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2067795570",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a20bd514bb874723",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1973224065",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a20bd514bb874723",
            "security_group_rule_id": "sgr-0153cb98a3a8fdf5f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:network-acl/acl-049d2d09c16ea4e4f",
            "default_network_acl_id": "acl-049d2d09c16ea4e4f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-049d2d09c16ea4e4f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "690248313330",
            "subnet_ids": [
              "subnet-0024958f5f2f2daee",
              "subnet-0717408d1c369f04a",
              "subnet-08ed219be86ac90fe",
              "subnet-0c6fb65c9ece7c01a",
              "subnet-0e608cfe0ff0277c8",
              "subnet-0eddc8e1be491515e"
            ],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:route-table/rtb-0d11882d8cb18c3de",
            "default_route_table_id": "rtb-0d11882d8cb18c3de",
            "id": "rtb-0d11882d8cb18c3de",
            "owner_id": "690248313330",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-09fcf509cee294a19",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09fcf509cee294a19",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d033dace50b07099",
            "arn": "arn:aws:ec2:us-east-1:690248313330:elastic-ip/eipalloc-0d033dace50b07099",
            "domain": "vpc",
            "id": "eipalloc-0d033dace50b07099",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-21-202-173.compute-1.amazonaws.com",
            "public_ip": "52.21.202.173",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:internet-gateway/igw-0b8a4b9170ebc7e4c",
            "id": "igw-0b8a4b9170ebc7e4c",
            "owner_id": "690248313330",
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC"
            },
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d033dace50b07099",
            "association_id": "eipassoc-05296826efb31486f",
            "connectivity_type": "public",
            "id": "nat-0707dfb235390c9ce",
            "network_interface_id": "eni-049a41fdae9d99d2a",
            "private_ip": "10.0.101.94",
            "public_ip": "52.21.202.173",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c6fb65c9ece7c01a",
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-009b415739192af121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0707dfb235390c9ce",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-009b415739192af12",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b8a4b9170ebc7e4c",
            "id": "r-rtb-04ba7865ff7a746fc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04ba7865ff7a746fc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:route-table/rtb-0fa4b3068afd5f076",
            "id": "rtb-0fa4b3068afd5f076",
            "owner_id": "690248313330",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-db"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:route-table/rtb-009b415739192af12",
            "id": "rtb-009b415739192af12",
            "owner_id": "690248313330",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-private"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:route-table/rtb-04ba7865ff7a746fc",
            "id": "rtb-04ba7865ff7a746fc",
            "owner_id": "690248313330",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-public"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df982637183bd1d4",
            "route_table_id": "rtb-0fa4b3068afd5f076",
            "subnet_id": "subnet-08ed219be86ac90fe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f58b45993c3ddf4",
            "route_table_id": "rtb-0fa4b3068afd5f076",
            "subnet_id": "subnet-0e608cfe0ff0277c8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e01dee155c18703",
            "route_table_id": "rtb-009b415739192af12",
            "subnet_id": "subnet-0717408d1c369f04a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0929d25ce151a5ded",
            "route_table_id": "rtb-009b415739192af12",
            "subnet_id": "subnet-0024958f5f2f2daee"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b50d93a34adf14d7",
            "route_table_id": "rtb-04ba7865ff7a746fc",
            "subnet_id": "subnet-0c6fb65c9ece7c01a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05556502e7c5e92d4",
            "route_table_id": "rtb-04ba7865ff7a746fc",
            "subnet_id": "subnet-0eddc8e1be491515e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-08ed219be86ac90fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ed219be86ac90fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_database_subnet"
            },
            "tags_all": {
              "Name": "my_database_subnet"
            },
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-0e608cfe0ff0277c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e608cfe0ff0277c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_database_subnet"
            },
            "tags_all": {
              "Name": "my_database_subnet"
            },
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-0717408d1c369f04a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0717408d1c369f04a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet"
            },
            "tags_all": {
              "Name": "my_private_subnet"
            },
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-0024958f5f2f2daee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0024958f5f2f2daee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet"
            },
            "tags_all": {
              "Name": "my_private_subnet"
            },
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-0c6fb65c9ece7c01a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6fb65c9ece7c01a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet"
            },
            "tags_all": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-0eddc8e1be491515e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eddc8e1be491515e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet"
            },
            "tags_all": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-0f39000d60712946b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:vpc/vpc-0f39000d60712946b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049d2d09c16ea4e4f",
            "default_route_table_id": "rtb-0d11882d8cb18c3de",
            "default_security_group_id": "sg-09fcf509cee294a19",
            "dhcp_options_id": "dopt-0d229ad7ffd0a5ec3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f39000d60712946b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d11882d8cb18c3de",
            "owner_id": "690248313330",
            "tags": {
              "Name": "my_vpc_practise",
              "environment": "dev",
              "owner": "Gopi"
            },
            "tags_all": {
              "Name": "my_vpc_practise",
              "environment": "dev",
              "owner": "Gopi"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}